--- a/ABSmartly.DotNet.Examples.WPF/App.xaml
+++ b/ABSmartly.DotNet.Examples.WPF/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="ABSmartly.DotNet.Examples.WPF.App"
+﻿<Application x:Class="WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ABSmartly.DotNet.Examples.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
