--- a/ABSmartly.DotNet.Examples.WPF/MainWindow.xaml
+++ b/ABSmartly.DotNet.Examples.WPF/MainWindow.xaml
@@ -1,12 +1,23 @@
-﻿<Window x:Class="ABSmartly.DotNet.Examples.WPF.MainWindow"
+﻿<Window x:Class="WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ABSmartly.DotNet.Examples.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="A/B Smartly WPF Example" 
+        Height="250" Width="300">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
         
+        <Button Grid.Column="1" Grid.Row="1" x:Name="Button1" Click="Button1_Click" Content="Test"/>
     </Grid>
 </Window>
